@@ -6,6 +6,8 @@ Revision history for Test-BrewBuild
           where setting a run count never stopped auto mode (fixes #224)
         - cleanup of logging in auto mode upon completion of a run
         - updated perls in Travis CI to include 5.26, 5.24
+        - removed requirement for external t/script/bbtester_kill.pl script
+          (fixes #226)
 
 2.19    2017-08-05
         - added 'status' command to bbtester, prints to STDOUT whether a tester
